apps/port-io/port-io-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: port-io-route
  namespace: port-io
spec:
  parentRefs:
  - name: api-gateway
    kind: Gateway
    namespace: gateway-api
  hostnames:
  - port.matheus.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: port-io
      kind: Service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: port-io-api-route
  namespace: port-io
spec:
  parentRefs:
  - name: api-gateway
    kind: Gateway
    namespace: gateway-api
  hostnames:
  - api.port.matheus.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: port-io
      kind: Service
      port: 80
